additional project files

--- a/1D-Discharge.cbp
+++ b/1D-Discharge.cbp
@@ -32,7 +32,20 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="main.cpp" />
+		<Unit filename="1DPoisson.cpp" />
+		<Unit filename="1DPoisson.h" />
+		<Unit filename="1DTransport.cpp" />
+		<Unit filename="1DTransport.h" />
+		<Unit filename="1D_MainFun.cpp" />
+		<Unit filename="1D_MainFun.h" />
+		<Unit filename="1Dmesh.cpp" />
+		<Unit filename="1Dmesh.h" />
+		<Unit filename="Comps_N2.txt" />
+		<Unit filename="GasPropDB.txt" />
+		<Unit filename="Initials.cpp" />
+		<Unit filename="Initials.h" />
+		<Unit filename="Read_mesh.cpp" />
+		<Unit filename="Read_mesh.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
