Combination of 0DModel with 1DTransport and Poisson
via pointers

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 1D-Discharge.layout
+Cross_N2_lxtype.txt
+Comps_N2.txt
+1D-Discharge.cscope_file_list
+N2_chemistry_new.txt
+Comps_N2.txt
