--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,17 @@ Comps_N2.txt
 *.txt
 *.o
 *.o
+
+bin/Debug/1D-Discharge.exe
+
+*.o
+
+gmon.out
+
+obj/Debug/1D_MainFun.o
+
+obj/Debug/1Dmesh.o
+
+obj/Debug/Chemistry_calc.o
+
+obj/Debug/EEDF_calc.o
