Additional to 20april commit

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ obj/Debug/1Dmesh.o
 obj/Debug/Chemistry_calc.o
 
 obj/Debug/EEDF_calc.o
+1D-Discharge.layout
+bin/Release/1D-Discharge.exe
+*.depend
