Stable_dtHeat_StJd(Xi)+dtChem_version
1)Functon order changed to dtHeatTransport -> Stationary SpecTransport
-> Chemistry
2)Save/start_from_save-file inserted and verified
3)Diffusion flux changed to Jd=-D*N*dXi/dt instead of Jd=-D*dNi/dt

--- a/1D-Discharge.cbp
+++ b/1D-Discharge.cbp
@@ -41,6 +41,8 @@
 		<Unit filename="Chemistry_calc.cpp" />
 		<Unit filename="Chemistry_calc.h" />
 		<Unit filename="Comps_N2.txt" />
+		<Unit filename="Cross_N2_lxtype-2.txt" />
+		<Unit filename="Cross_N2_lxtype.txt" />
 		<Unit filename="EEDF_calc.cpp" />
 		<Unit filename="EEDF_calc.h" />
 		<Unit filename="GasPropDB.txt" />
@@ -48,6 +50,9 @@
 		<Unit filename="Gas_calc.h" />
 		<Unit filename="Initials.cpp" />
 		<Unit filename="Initials.h" />
+		<Unit filename="N2_chemistry_new-2.txt" />
+		<Unit filename="N2_chemistry_new.txt" />
+		<Unit filename="ReactionSet.txt" />
 		<Extensions>
 			<code_completion />
 			<envvars />
